# omicron

./: .gitignore  Cargo.toml
crates/omicron/: Cargo.toml
crates/omicron/src/: app.rs  error.rs  lib.rs  main.rs  router.rs
crates/omicron/src/controllers/: mod.rs  root.rs
crates/omicron/src/controllers/wiki/: mod.rs  page.rs
